# monorepo

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: documentation.yml
apps/auth/: .env.dockerdev  Dockerfile  app-start.sh  docker-compose.yml  package.json  pnpm-lock.yaml
apps/cron-health/: package.json  pnpm-lock.yaml
apps/graphql/: Dockerfile  build.gradle.kts  package.json  pnpm-lock.yaml  settings.gradle.kts  tsconfig.json
apps/image-optimization/: Cargo.toml  Dockerfile  Dockerfile.old  README.md  docker-compose.yml  go.mod  go.sum  main.go
apps/image-optimization/models/: image.go
apps/image-optimization/mongo/: mongo.go
apps/image-optimization/routes/: images.go  routes.go
apps/image-optimization/src/: main.rs  validate_token.rs
apps/image-optimization/src/controllers/: mod.rs  save_file.rs  serve_image.rs
apps/image-optimization/tests/http/: create-image.http  healthcheck.http
apps/image-optimization/utils/: error.go  image.go  structs.go
apps/user-service/: .eslintrc  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
libraries/eslint-config-ethang/: .eslintrc.js  build.mjs  package.json  pnpm-lock.yaml
libraries/hooks/: build.mjs  package.json  pnpm-lock.yaml  tsconfig.json
libraries/project-builder/: package.json  pnpm-lock.yaml  tsconfig.json
libraries/toolbelt/: build.mjs  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
libraries/util/: package.json  pnpm-lock.yaml  tsconfig.json
resources/: package.json  pnpm-lock.yaml
(+131 files in other folders)
